--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,4 +1,15 @@
-<div class="interactive-wrapper">
+<!-- <div class="interactive-wrapper">
 	<div class="buttons"></div>
 	<div class="date"></div>
+</div> -->
+
+
+<div id="scrolly-1">
+    <div class="scroll-wrapper">
+        <div class="scroll-inner">
+			<div class="date"></div>
+        </div>
+        <div class="scroll-text">
+        </div>
+    </div>
 </div>
